# ewhs-api-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish  publish.yml  test_and_release.yml  tests.yml
ewhs/: client.py  exceptions.py  mixins.py  resources.py
tests/: conftest.py  test_articles.py  test_client.py  test_orders.py  test_products.py  test_shipments.py  test_shipping_methods.py  test_stock.py  test_webhooks.py
tests/responses/: article_list.json  auth_login.json  auth_login_error.json  auth_login_refresh.json  bad_request.json  order_list.json  order_single.json  shipment_list.json  shipment_single.json  shipping_methods_list.json  shipping_methods_single.json  stock_list.json  webhook_list.json
