[tool.poetry]
name = "ewhs-api-python"
version = "1.0.0-beta.4"
description = "Python library for the eWarehousing Solutions API."
authors = ["Liam Boer <liamboer@outlook.com>", "Henny Krijnen <hennykrijnen@ewarehousing-solutions.nl>"]
packages = [
    { include = "ewhs" }
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
responses = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
